--- a/templates/marketplace/home.html
+++ b/templates/marketplace/home.html
@@ -4,5 +4,6 @@
 
 <h4> This is homepage. That's all you need to know for now </h4>
 
+<h5>You can check user login <a href="/login">here</a></h5>
 
 {% endblock content %}
