--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -22,7 +22,7 @@
           <!-- Email input -->
           <div class="form-outline mb-4">
             <input type="email" id="form3Example3" class="form-control form-control-lg"
-              placeholder="Enter a valid email address" name="email"/>
+              placeholder="Enter email" name="email"/>
             <label class="form-label" for="form3Example3">Email </label>
           </div>
 
