--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -16,7 +16,7 @@
           class="img-fluid" alt="Sample image">
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-    <form method="POST" action="{% url 'login_view' %}">
+    <form method="POST" action="{% url 'login' %}">
          {% csrf_token %}
 
           <!-- Email input -->
