--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -3,7 +3,7 @@
 {% block title %} Registered {% endblock title %}
 
 {% block stylesheet %} {{ block.super}}
-<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
+<link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css"/>
 {% endblock stylesheet %}
 
 {% block content %}
