--- a/templates/user/user_page_own.html
+++ b/templates/user/user_page_own.html
@@ -138,9 +138,35 @@
                     <div class="card-body">
                         <h5 class="card-title">My children</h5>
 
-                        <div class="d-flex justify-content-left mb-2">
-                            <button type="button" class="btn btn-success">Add New Child</button>
-                        </div>
+                        <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
+                              Add New Child
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                              <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                  <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Add information about your child</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                      <span aria-hidden="true">&times;</span>
+                                    </button>
+                                  </div>
+                                  <div class="modal-body">
+
+
+                                    <!-- Child form fields go here -->
+
+
+                                  </div>
+                                  <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
                     </div>
                 </div>
 
@@ -232,3 +258,9 @@
 
 {% endblock content %}
 
+
+{% block javascript %}
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+{% endblock %}
