--- a/templates/user/swiping.html
+++ b/templates/user/swiping.html
@@ -10,19 +10,7 @@
 
     <div class="wrapper">
         <div class="d-md-flex align-items-md-center">
-            <div class="h3">Fruits and vegetables</div>
-            <div class="ml-auto d-flex align-items-center views"> <span class="btn text-success"> <span class="fas fa-th px-md-2 px-1"></span><span>Grid view</span> </span> <span class="btn"> <span class="fas fa-list-ul"></span><span class="px-md-2 px-1">List view</span> </span> <span class="green-label px-md-2 px-1">428</span> <span class="text-muted">Products</span> </div>
-        </div>
-        <div class="d-lg-flex align-items-lg-center pt-2">
-            <div class="form-inline d-flex align-items-center my-2 mr-lg-2 radio bg-light border"> <label class="options">Most Popular <input type="radio" name="radio"> <span class="checkmark"></span> </label> <label class="options">Cheapest <input type="radio" name="radio" checked> <span class="checkmark"></span> </label> </div>
-            <div class="form-inline d-flex align-items-center my-2 checkbox bg-light border mx-lg-2"> <label class="tick">Farm <input type="checkbox" checked="checked"> <span class="check"></span> </label> <span class="text-success px-2 count"> 328</span> </div>
-            <div class="form-inline d-flex align-items-center my-2 checkbox bg-light border mx-lg-2"> <label class="tick">Bio <input type="checkbox"> <span class="check"></span> </label> <span class="text-success px-2 count"> 72</span> </div>
-            <div class="form-inline d-flex align-items-center my-2 checkbox bg-light border mx-lg-2"> <label class="tick">Czech republic <input type="checkbox"> <span class="check"></span> </label> <span class="border px-1 mx-2 mr-3 font-weight-bold count"> 12</span> <select name="country" id="country" class="bg-light">
-                    <option value="" hidden>Country</option>
-                    <option value="India">India</option>
-                    <option value="USA">USA</option>
-                    <option value="Uk">UK</option>
-                </select> </div>
+            <div class="h3">Find a PlayPal</div>
         </div>
         <div class="d-sm-flex align-items-sm-center pt-2 clear">
             <div class="text-muted filter-label">Applied Filters:</div>
@@ -30,16 +18,7 @@
             <div class="green-label font-weight-bold p-0 px-1 mx-sm-1 mx-0">Selected Filtre <span class=" px-1 close">&times;</span> </div>
         </div>
         <div class="filters"> <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#mobile-filter" aria-expanded="true" aria-controls="mobile-filter">Filter<span class="px-1 fas fa-filter"></span></button> </div>
-        <div id="mobile-filter">
-            <div class="py-3">
-                <h5 class="font-weight-bold">Categories</h5>
-                <ul class="list-group">
-                    <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center category"> vegetables <span class="badge badge-primary badge-pill">328</span> </li>
-                    <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center category"> Fruits <span class="badge badge-primary badge-pill">112</span> </li>
-                    <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center category"> Kitchen Accessories <span class="badge badge-primary badge-pill">32</span> </li>
-                    <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center category"> Chefs Tips <span class="badge badge-primary badge-pill">48</span> </li>
-                </ul>
-            </div>
+        <div id="mobile-filter"> <!-- Mobile section-->
             <div class="py-3">
                 <h5 class="font-weight-bold">Brands</h5>
                 <form class="brand">
@@ -61,25 +40,25 @@
                 </form>
             </div>
         </div>
-        <div class="content py-md-0 py-3">
+        <div class="content py-md-0 py-3"> <!-- Web section-->
             <section id="sidebar">
                 <div class="py-3">
-                    <h5 class="font-weight-bold">Categories</h5>
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center category"> vegetables <span class="badge badge-primary badge-pill">328</span> </li>
-                        <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center category"> Fruits <span class="badge badge-primary badge-pill">112</span> </li>
-                        <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center category"> Kitchen Accessories <span class="badge badge-primary badge-pill">32</span> </li>
-                        <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center category"> Chefs Tips <span class="badge badge-primary badge-pill">48</span> </li>
-                    </ul>
-                </div>
-                <div class="py-3">
-                    <h5 class="font-weight-bold">Brands</h5>
-                    <form class="brand">
-                        <div class="form-inline d-flex align-items-center py-1"> <label class="tick">Royal Fields <input type="checkbox"> <span class="check"></span> </label> </div>
-                        <div class="form-inline d-flex align-items-center py-1"> <label class="tick">Crasmas Fields <input type="checkbox" checked> <span class="check"></span> </label> </div>
-                        <div class="form-inline d-flex align-items-center py-1"> <label class="tick">Vegetarisma Farm <input type="checkbox" checked> <span class="check"></span> </label> </div>
-                        <div class="form-inline d-flex align-items-center py-1"> <label class="tick">Farmar Field Eve <input type="checkbox"> <span class="check"></span> </label> </div>
-                        <div class="form-inline d-flex align-items-center py-1"> <label class="tick">True Farmar Steve <input type="checkbox"> <span class="check"></span> </label> </div>
+                    <h5 class="font-weight-bold">Preferences</h5>
+                    <form class="user-preferences">
+                        <form class="bs-multi-range my-5 pb-5">
+                        <label for="parent-age-range" class="form-label">Parent's age range</label>
+                        <input id="parent-age" class="multi-range" type="range" min="18" max="70">
+                        </form>   
+
+                        <form class="bs-multi-range my-5 pb-5">
+                        <label for="children-age-range" class="form-label">Child's age range</label>
+                        <input id="child-age" class="multi-range" type="range" min="1" max="10">
+
+                        <div class="form-inline d-flex align-items-center py-2"><label class="tick">Sports<input type="checkbox"> <span class="check"></span></label> </div>
+                        <div class="form-inline d-flex align-items-center py-2"><label class="tick">Music<input type="checkbox"> <span class="check"></span></label> </div>
+                        <div class="form-inline d-flex align-items-center py-2"><label class="tick">Videogames<input type="checkbox"> <span class="check"></span></label> </div>
+
+                        </form>   
                     </form>
                 </div>
                 <div class="py-3">
