--- a/static/css/main.css
+++ b/static/css/main.css
@@ -387,3 +387,39 @@ img{
     object-fit: cover; /* Maintain aspect ratio while covering the space */
     margin-right: 5px;
 }
+
+.border_pic{
+    border-radius: 10px;
+    margin: 5px;
+
+}
+
+
+.tinder--buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tinder--buttons button {
+    border: none;
+    background-color: transparent;
+    width: 50px;
+    height: 50px;
+    margin: 0 10px; /* Adjust margin as needed for spacing */
+    padding: 0; /* Remove padding */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tinder--buttons button#love1 {
+    width: 57px; /* Adjust the width as needed */
+    height: 57px; /* Adjust the height as needed */
+}
+
+
+.tinder--buttons button img {
+    width: 100%; /* Make the image fill the button */
+    height: 100%; /* Make the image fill the button */
+}
