- add own css file for profile_page_own. -remove extra link to css.main in basic.html

--- a/templates/user/user_page_own.html
+++ b/templates/user/user_page_own.html
@@ -3,7 +3,7 @@
 {% block title %} Login {% endblock title %}
 
 {% block stylesheet %} {{ block.super}}
-<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'css/own_profile.css' %}"/>
 {% endblock stylesheet %}
 
 {% block content %}
