--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,334 +1,336 @@
 /* Custom CSS styles */
 .card-square {
-    width: 75px; /* Adjust the width to your preferred size */
-    height: 75px; /* Adjust the height to your preferred size */
-    text-align: center; /* Center the content */
-    margin: 10px; /* Add margin for spacing between cards */
-}
-.card-img-top {
-    max-height: px; /* Adjust the maximum height of the image */
-    max-width: 75px; /* Adjust the maximum width of the image */
-    object-fit: cover; /* Maintain aspect ratio while covering the space */
+  width: 75px; /* Adjust the width to your preferred size */
+  height: 75px; /* Adjust the height to your preferred size */
+  text-align: center; /* Center the content */
+  margin: 10px; /* Add margin for spacing between cards */
 }
 
 .text-xxs {
-  font-size: 0.90rem; /* Adjust the font size as needed */
+  font-size: 0.9rem; /* Adjust the font size as needed */
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-.wrapper{
-    padding: 30px;
-    max-width: 1200px;
-    margin: auto;
+.wrapper {
+  padding: 30px;
+  max-width: 1200px;
+  margin: auto;
 }
-.h3{
-    font-weight: 900;
+.h3 {
+  font-weight: 900;
 }
-.views{
-    font-size: 0.85rem;
+.views {
+  font-size: 0.85rem;
 }
-.btn{
-    color: #666;
-    font-size: 0.85rem;
+.btn {
+  color: #666;
+  font-size: 0.85rem;
 }
-.btn:hover{
-    color: #61b15a;
+.btn:hover {
+  color: #61b15a;
 }
-.green-label{
-    background-color: #defadb;
-    color: #48b83e;
-    border-radius: 5px;
-    font-size: 0.8rem;
-    margin: 0 3px;
+.green-label {
+  background-color: #defadb;
+  color: #48b83e;
+  border-radius: 5px;
+  font-size: 0.8rem;
+  margin: 0 3px;
 }
-.radio,.checkbox{
-    padding: 6px 10px;
+.radio,
+.checkbox {
+  padding: 6px 10px;
 }
-.border{
-    border-radius: 12px;
+.border {
+  border-radius: 12px;
 }
-.options{
-    position: relative;
-    padding-left: 25px;
+.options {
+  position: relative;
+  padding-left: 25px;
 }
 .radio label,
-.checkbox label{
-    display: block;
-    font-size: 14px;
-    cursor: pointer;
-    margin: 0;
+.checkbox label {
+  display: block;
+  font-size: 14px;
+  cursor: pointer;
+  margin: 0;
 }
-.options input{
-    opacity: 0;
+.options input {
+  opacity: 0;
 }
 .checkmark {
-    position: absolute;
-    top: 0px;
-    left: 0;
-    height: 20px;
-    width: 20px;
-    background-color: #f8f8f8;
-    border: 1px solid #ddd;
-    border-radius: 50%;
+  position: absolute;
+  top: 0px;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  border-radius: 50%;
 }
 .options input:checked ~ .checkmark:after {
-    display: block;
+  display: block;
 }
-.options .checkmark:after{
-    content: "";
-	width: 9px;
-    height: 9px;
-    display: block;
-	background: white;
-    position: absolute;
-    top: 52%;
-	left: 51%;
-    border-radius: 50%;
-    transform: translate(-50%,-50%) scale(0);
-    transition: 300ms ease-in-out 0s;
+.options .checkmark:after {
+  content: "";
+  width: 9px;
+  height: 9px;
+  display: block;
+  background: white;
+  position: absolute;
+  top: 52%;
+  left: 51%;
+  border-radius: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 300ms ease-in-out 0s;
 }
-.options input[type="radio"]:checked ~ .checkmark{
-    background: #61b15a;
-    transition: 300ms ease-in-out 0s;
+.options input[type="radio"]:checked ~ .checkmark {
+  background: #61b15a;
+  transition: 300ms ease-in-out 0s;
 }
-.options input[type="radio"]:checked ~ .checkmark:after{
-    transform: translate(-50%,-50%) scale(1);
+.options input[type="radio"]:checked ~ .checkmark:after {
+  transform: translate(-50%, -50%) scale(1);
 }
-.count{
-    font-size: 0.8rem;
+.count {
+  font-size: 0.8rem;
 }
-label{
-    cursor: pointer;
+label {
+  cursor: pointer;
 }
-.tick{
-    display: block;
-    position: relative;
-    padding-left: 23px;
-    cursor: pointer;
-    font-size: 0.8rem;
-    margin: 0;
+.tick {
+  display: block;
+  position: relative;
+  padding-left: 23px;
+  cursor: pointer;
+  font-size: 0.8rem;
+  margin: 0;
 }
-.tick input{
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
+.tick input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
 }
-.check{
-    position: absolute;
-    top: 1px;
-    left: 0;
-    height: 18px;
-    width: 18px;
-    background-color: #f8f8f8;
-    border: 1px solid #ddd;
-    border-radius: 3px;
+.check {
+  position: absolute;
+  top: 1px;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  border-radius: 3px;
 }
 .tick:hover input ~ .check {
-    background-color: #f3f3f3;
+  background-color: #f3f3f3;
 }
 .tick input:checked ~ .check {
-    background-color: #61b15a;
+  background-color: #61b15a;
 }
 .check:after {
-    content: "";
-    position: absolute;
-    display: none;
+  content: "";
+  position: absolute;
+  display: none;
 }
 .tick input:checked ~ .check:after {
-    display: block;
-    transform: rotate(45deg) scale(1);
+  display: block;
+  transform: rotate(45deg) scale(1);
 }
 .tick .check:after {
-    left: 6px;
-    top: 2px;
-    width: 5px;
-    height: 10px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    transform: rotate(45deg) scale(2);
+  left: 6px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg) scale(2);
 }
-#country{
-    font-size: 0.8rem;
-    border: none;
-    border-left: 1px solid #ccc;
-    padding: 0px 10px;
-    outline: none;
-    font-weight: 900;
+#country {
+  font-size: 0.8rem;
+  border: none;
+  border-left: 1px solid #ccc;
+  padding: 0px 10px;
+  outline: none;
+  font-weight: 900;
 }
-.close{
-    font-size: 1.2rem;
+.close {
+  font-size: 1.2rem;
 }
-div.text-muted{
-    font-size: 0.85rem;
+div.text-muted {
+  font-size: 0.85rem;
 }
-#sidebar{
-    width: 25%;
-    float: left;
+#sidebar {
+  width: 25%;
+  float: left;
 }
-.category{
-    font-size: 0.9rem;
-    cursor: pointer;
+.category {
+  font-size: 0.9rem;
+  cursor: pointer;
 }
-.list-group-item{
-    border: none;
-    padding: 0.3rem 0.4rem 0.3rem 0rem;
+.list-group-item {
+  border: none;
+  padding: 0.3rem 0.4rem 0.3rem 0rem;
 }
-.badge-primary{
-    background-color: #defadb;
-    color: #48b83e
+.badge-primary {
+  background-color: #defadb;
+  color: #48b83e;
 }
-.brand .check{
-    background-color: #fff;
-    top: 3px;
-    border: 1px solid #666;
+.brand .check {
+  background-color: #fff;
+  top: 3px;
+  border: 1px solid #666;
 }
-.brand .tick{
-    font-size: 1rem;
-    padding-left: 25px;
+.brand .tick {
+  font-size: 1rem;
+  padding-left: 25px;
 }
-.rating .check{
-    background-color: #fff;
-    border: 1px solid #666;
-    top: 0;
+.rating .check {
+  background-color: #fff;
+  border: 1px solid #666;
+  top: 0;
 }
-.rating .tick{
-    font-size: 0.9rem;
-    padding-left: 25px;
+.rating .tick {
+  font-size: 0.9rem;
+  padding-left: 25px;
 }
-.rating .fas.fa-star{
-    color: #ffbb00;
-    padding: 0px 3px;
+.rating .fas.fa-star {
+  color: #ffbb00;
+  padding: 0px 3px;
 }
 .brand .tick:hover input ~ .check,
-.rating .tick:hover input ~ .check{
-    background-color: #f9f9f9;
+.rating .tick:hover input ~ .check {
+  background-color: #f9f9f9;
 }
 .brand .tick input:checked ~ .check,
-.rating .tick input:checked ~ .check{
-    background-color: #61b15a;
+.rating .tick input:checked ~ .check {
+  background-color: #61b15a;
 }
-#products{
-    width: 75%;
-    padding-left: 30px;
-    margin: 0;
-    float: right;
+#products {
+  width: 75%;
+  padding-left: 30px;
+  margin: 0;
+  float: right;
 }
-.card:hover{
-    transform: scale(1.1);
-    transition: all 0.5s ease-in-out;
-    cursor: pointer;
+.card:hover {
+  transform: scale(1.1);
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
 }
-.card-body{
-    padding: 0.5rem;
+.card-body {
+  padding: 0.5rem;
 }
-.card-body .description{
-    font-size: 0.78rem;
-    padding-bottom: 8px;
+.card-body .description {
+  font-size: 0.78rem;
+  padding-bottom: 8px;
 }
-div.h6,h6{
-    margin: 0;
+div.h6,
+h6 {
+  margin: 0;
 }
-.product .fa-star{
-    font-size: 0.9rem;
+.product .fa-star {
+  font-size: 0.9rem;
 }
-.rebate{
-    font-size: 0.9rem   ;
+.rebate {
+  font-size: 0.9rem;
 }
-.btn.btn-primary{
-    background-color: #48b83e;
-    color: #fff;
-    border: 1px solid #008000;
-    border-radius: 10px;
-    font-weight: 800;
+.btn.btn-primary {
+  background-color: #48b83e;
+  color: #fff;
+  border: 1px solid #008000;
+  border-radius: 10px;
+  font-weight: 800;
 }
-.btn.btn-primary:hover{
-    background-color: #48b83ee8;
+.btn.btn-primary:hover {
+  background-color: #48b83ee8;
 }
-img{
-    width: 192px;
-    height: 132px;
-    object-fit: contain;
+img {
+  width: 192px;
+  height: 132px;
+  object-fit: contain;
 }
 
-.clear{
+.clear {
+  clear: both;
+}
+.btn.btn-success {
+  visibility: hidden;
+}
+@media (min-width: 992px) {
+  .filter,
+  #mobile-filter {
+    display: none;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .radio,
+  .checkbox {
+    padding: 6px 10px;
+    width: 49%;
+    float: left;
+    margin: 5px 5px 5px 0px;
+  }
+  .filter,
+  #mobile-filter {
+    display: none;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  #sidebar {
+    width: 35%;
+  }
+  #products {
+    width: 65%;
+  }
+  .filter,
+  #mobile-filter {
+    display: none;
+  }
+  .h3 + .ml-auto {
+    margin: 0;
+  }
+}
+@media (max-width: 575px) {
+  .wrapper {
+    padding: 10px;
+  }
+  .h3 {
+    font-size: 1.3rem;
+  }
+  #sidebar {
+    display: none;
+  }
+  #products {
+    width: 100%;
+    float: none;
+  }
+  #products {
+    padding: 0;
+  }
+  .clear {
+    float: left;
+    width: 80%;
+  }
+  .btn.btn-success {
+    visibility: visible;
+    margin: 10px 0px;
+    color: #fff;
+    padding: 0.2rem 0.1rem;
+    width: 20%;
+  }
+  .green-label {
+    width: 50%;
+  }
+  .btn.text-success {
+    padding: 0;
+  }
+  .content,
+  #mobile-filter {
     clear: both;
-}
-.btn.btn-success{
-    visibility: hidden;
-}
-@media(min-width:992px){
-    .filter,#mobile-filter{
-        display: none;
-    }
-}
-@media(min-width:768px) and (max-width:991px){
-    .radio, .checkbox {
-        padding: 6px 10px;
-        width: 49%;
-        float: left;
-        margin: 5px 5px 5px 0px;
-    }
-    .filter,#mobile-filter{
-        display: none;
-    }
-}
-@media(min-width:576px) and (max-width:767px){
-    #sidebar{
-        width: 35%;
-    }
-    #products{
-        width: 65%;
-    }
-    .filter,#mobile-filter{
-        display: none;
-    }
-    .h3 + .ml-auto{
-        margin: 0;
-    }
-}
-@media(max-width:575px){
-    .wrapper{
-        padding: 10px;
-    }
-    .h3{
-        font-size: 1.3rem;
-    }
-    #sidebar{
-        display: none;
-    }
-    #products{
-        width: 100%;
-        float: none;
-    }
-    #products{
-        padding: 0;
-    }
-    .clear{
-        float: left;
-        width: 80%;
-    }
-    .btn.btn-success{
-        visibility: visible;
-        margin: 10px 0px;
-        color: #fff;
-        padding: 0.2rem 0.1rem;
-        width: 20%;
-    }
-    .green-label{
-        width: 50%;
-    }
-    .btn.text-success{
-        padding: 0;
-    }
-    .content,#mobile-filter{
-        clear: both;
-    }
+  }
 }
