--- a/templates/user/swiping.html
+++ b/templates/user/swiping.html
@@ -44,16 +44,40 @@
             <section id="sidebar">
                 <div class="py-3">
                     <h5 class="font-weight-bold">Preferences</h5>
+                    <h6 class="font-weight-bold">Ages</h6>
                     <form class="user-preferences">
-                        <form class="bs-multi-range my-5 pb-5">
-                        <label for="parent-age-range" class="form-label">Parent's age range</label>
-                        <input id="parent-age" class="multi-range" type="range" min="18" max="70">
+                        <form class="bs-multi-range my-2 pb-2">
+                        <label for="parent-min-age-range" class="form-label">Parent's minimum age</label>
+                        <input id="parent-min-age" class="multi-range" type="range" min="18" max="70">
+                        </form>
+
+                        <form class="bs-multi-range my-2 pb-2">
+                        <label for="parent-max-age-range" class="form-label">Parent's maximum age</label>
+                        <input id="parent-max-age" class="multi-range" type="range" min="18" max="70">
                         </form>   
 
-                        <form class="bs-multi-range my-5 pb-5">
-                        <label for="children-age-range" class="form-label">Child's age range</label>
-                        <input id="child-age" class="multi-range" type="range" min="1" max="10">
+                        <form class="bs-multi-range my-2 pb-2">
+                        <label for="children-min-age-range" class="form-label">Child's minimum age</label>
+                        <input id="child-max-age" class="multi-range" type="range" min="1" max="10">
+                        </form>
 
+                        <form class="bs-multi-range my-2 pb-2">
+                        <label for="children-max-age-range" class="form-label">Child's maximum age</label>
+                        <input id="child-max-age" class="multi-range" type="range" min="1" max="10">
+                        </form>
+
+                        <div class="dropdown my-2 pb-2">
+                        <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Marital status
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            {% for interest in interestlist  %}
+                            <a class="dropdown-item" href="#">{{interest.interest_name}}</a>
+                            {% endfor %}
+                        </div>
+                        </div>
+
+                        <h6 class="font-weight-bold">Interests</h6>
                         <div class="form-inline d-flex align-items-center py-2"><label class="tick">Sports<input type="checkbox"> <span class="check"></span></label> </div>
                         <div class="form-inline d-flex align-items-center py-2"><label class="tick">Music<input type="checkbox"> <span class="check"></span></label> </div>
                         <div class="form-inline d-flex align-items-center py-2"><label class="tick">Videogames<input type="checkbox"> <span class="check"></span></label> </div>
@@ -75,11 +99,13 @@
             <section id="products">
                 <div class="container py-3">
                     <div class="row">
+                        {% for user in userlist %}
                         <div class="col-lg-4 col-md-6 col-sm-10 offset-md-0 offset-sm-1">
-                            <div class="card"> <img class="card-img-top" src="https://www.freepnglogos.com/uploads/cucumber-png/cucumber-png-image-purepng-transparent-png-26.png">
+                            <div class="card"> <img class="card-img-top mx-auto rounded" src="{% if user.avatar %}{{ user.avatar.url }}{% else %}https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp{% endif %}">
                                 <div class="card-body">
-                                    <h6 class="font-weight-bold pt-1">Product title</h6>
-                                    <div class="text-muted description">Space for small product description</div>
+                                    <h6 class="font-weight-bold pt-1">{{user.first_name}}</h6>
+                                    <h6 class="pt-1">{{user.calculate_age}}, {{user.marital_status}}</h6>
+                                    <div class="text-muted description">{{user.bio}}</div>
                                     <div class="d-flex align-items-center product"> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="far fa-star"></span> </div>
                                     <div class="d-flex align-items-center justify-content-between pt-3">
                                         <div class="d-flex flex-column">
@@ -91,86 +117,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-10 offset-md-0 offset-sm-1 pt-md-0 pt-4">
-                            <div class="card"> <img class="card-img-top" src="https://www.freepnglogos.com/uploads/carrot-png/carrot-mint-with-turmeric-chia-equine-pure-delights-12.png">
-                                <div class="card-body">
-                                    <h6 class="font-weight-bold pt-1">Product title</h6>
-                                    <div class="text-muted description">Space for small product description</div>
-                                    <div class="d-flex align-items-center product"> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="far fa-star"></span> </div>
-                                    <div class="d-flex align-items-center justify-content-between pt-3">
-                                        <div class="d-flex flex-column">
-                                            <div class="h6 font-weight-bold">36.99 USD</div>
-                                            <div class="text-muted rebate">48.56</div>
-                                        </div>
-                                        <div class="btn btn-primary">Buy now</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-10 offset-md-0 offset-sm-1 pt-lg-0 pt-4">
-                            <div class="card"> <img class="card-img-top" src="https://www.freepnglogos.com/uploads/tomato-png/tomato-bunch-fresh-tomatoes-png-image-pngpix-24.png">
-                                <div class="card-body">
-                                    <h6 class="font-weight-bold pt-1">Product title</h6>
-                                    <div class="text-muted description">Space for small product description</div>
-                                    <div class="d-flex align-items-center product"> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="far fa-star"></span> </div>
-                                    <div class="d-flex align-items-center justify-content-between pt-3">
-                                        <div class="d-flex flex-column">
-                                            <div class="h6 font-weight-bold">36.99 USD</div>
-                                            <div class="text-muted rebate">48.56</div>
-                                        </div>
-                                        <div class="btn btn-primary">Buy now</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-10 offset-md-0 offset-sm-1 pt-lg-4 pt-4">
-                            <div class="card"> <img class="card-img-top" src="https://www.freepnglogos.com/uploads/grapes-png/grapes-grape-red-transparent-png-stickpng-5.png">
-                                <div class="card-body">
-                                    <h6 class="font-weight-bold pt-1">Product title</h6>
-                                    <div class="text-muted description">Space for small product description</div>
-                                    <div class="d-flex align-items-center product"> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="far fa-star"></span> </div>
-                                    <div class="d-flex align-items-center justify-content-between pt-3">
-                                        <div class="d-flex flex-column">
-                                            <div class="h6 font-weight-bold">36.99 USD</div>
-                                            <div class="text-muted rebate">48.56</div>
-                                        </div>
-                                        <div class="btn btn-primary">Buy now</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-10 offset-md-0 offset-sm-1 pt-lg-4 pt-4">
-                            <div class="card"> <img class="card-img-top" src="https://www.freepnglogos.com/uploads/cucumber-png/cucumber-png-image-purepng-transparent-png-26.png">
-                                <div class="card-body">
-                                    <h6 class="font-weight-bold pt-1">Product title</h6>
-                                    <div class="text-muted description">Space for small product description</div>
-                                    <div class="d-flex align-items-center product"> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="far fa-star"></span> </div>
-                                    <div class="d-flex align-items-center justify-content-between pt-3">
-                                        <div class="d-flex flex-column">
-                                            <div class="h6 font-weight-bold">36.99 USD</div>
-                                            <div class="text-muted rebate">48.56</div>
-                                        </div>
-                                        <div class="btn btn-primary">Buy now</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-10 offset-md-0 offset-sm-1 pt-lg-4 pt-4">
-                            <div class="card"> <img class="card-img-top" src="https://www.freepnglogos.com/uploads/watermelon-png/watermelon-gea-products-2.png">
-                                <div class="card-body">
-                                    <h6 class="font-weight-bold pt-1">Product title</h6>
-                                    <div class="text-muted description">Space for small product description</div>
-                                    <div class="d-flex align-items-center product"> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span class="far fa-star"></span> </div>
-                                    <div class="d-flex align-items-center justify-content-between pt-3">
-                                        <div class="d-flex flex-column">
-                                            <div class="h6 font-weight-bold">36.99 USD</div>
-                                            <div class="text-muted rebate">48.56</div>
-                                        </div>
-                                        <div class="btn btn-primary">Buy now</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </section>
